@@ -8,8 +8,10 @@
 #define __KCHARTCONFIGDIALOG_H__
 
 #include <qtabdialog.h>
+
 #include "kchartColorConfigPage.h"
 #include "kchartParameterConfigPage.h"
+#include "kchartParameter3dConfigPage.h"
 #include "kchartParameterPieConfigPage.h"
 //#include "kchartGeometryConfigPage.h"
 #include "kchartFontConfigPage.h"
@@ -22,17 +24,18 @@ class KChartConfigDialog : public QTabDialog
     Q_OBJECT
 
 public:
-    KChartConfigDialog( KChartParameters* params, 
+    KChartConfigDialog( KChartParameters* params,
 			QWidget*	parent );
 
 protected:
     KChartParameters* _params;
     //KChartGeometryConfigPage* _geompage;
     KChartColorConfigPage* _colorpage;
-    KChartParameterConfigPage*_parameterpage; 
-    KChartParameterPieConfigPage*_parameterpiepage; 
-    KChartFontConfigPage*_parameterfontpage; 
-    KChartPieConfigPage*_piepage; 
+    KChartParameterConfigPage*_parameterpage;
+    KChartParameter3dConfigPage*_parameter3dpage;
+    KChartParameterPieConfigPage*_parameterpiepage;
+    KChartFontConfigPage*_parameterfontpage;
+    KChartPieConfigPage*_piepage;
 protected slots:
     virtual void apply();
     virtual void defaults();
